chore: add swagger definitions
