# docs/swagger.json
@@ -12,7 +12,13 @@
         "/products": {
             "get": {
                 "description": "Get all products",
-                "summary": "Get products",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "List all products",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -22,33 +28,24 @@
                                 "$ref": "#/definitions/main.Product"
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 }
             },
             "post": {
-                "description": "Create a product with the provided data",
+                "description": "Add a new product to the database",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "products"
+                ],
                 "summary": "Create a new product",
                 "parameters": [
                     {
-                        "description": "Product data",
+                        "description": "Product object",
                         "name": "product",
                         "in": "body",
                         "required": true,
@@ -63,65 +60,48 @@
                         "schema": {
                             "$ref": "#/definitions/main.Product"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 }
             }
         },
         "/products/{id}": {
             "get": {
-                "description": "Get a specific product by ID",
-                "summary": "Get product",
+                "description": "Get a product by its ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Get a product",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "Product ID",
                         "name": "id",
-                        "in": "path"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/main.Product"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.Product"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update a product by ID",
+                "description": "Update a product's information",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "products"
                 ],
                 "summary": "Update a product",
                 "parameters": [
@@ -133,7 +113,7 @@
                         "required": true
                     },
                     {
-                        "description": "Product data",
+                        "description": "Updated product object",
                         "name": "product",
                         "in": "body",
                         "required": true,
@@ -148,23 +128,14 @@
                         "schema": {
                             "$ref": "#/definitions/main.Product"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 }
             },
             "delete": {
-                "description": "Delete a product by ID",
+                "description": "Delete a product by its ID",
+                "tags": [
+                    "products"
+                ],
                 "summary": "Delete a product",
                 "parameters": [
                     {
@@ -177,21 +148,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Deleted successfully",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -200,7 +162,6 @@
     },
     "definitions": {
         "main.Product": {
-            "description": "Product model",
             "type": "object",
             "properties": {
                 "id": {
